[package]
name = "ztln"
version = "1.0.0-alpha"
authors = ["greg"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
structopt = "0.3"
rand = "0.7"
regex = "1.4"
lazy_static = "1.4"
bincode = "1.3"
